# Arbisoft_Internship

./: README.md
Assignments/week3/: .gitignore  README.md  chunking.py  extract_pdf.py  generation_eval.py  generation_metrics.py  get_embeddings.py  hallucination.py  hallucination_eval.py  main.py  pyproject.toml  rag_pipeline.py  retrieval_eval.py  schemas.py  store_utils.py
Assignments/week3/data/: adversarial_eval_dataset.json  eval_dataset.json
Assignments/week3/docs/: constraints.txt  langchain_explained.txt  pydantic_explained.txt  tracker.txt  workflow.txt
Assignments/week3/results/: generation_eval.json  hallucination_eval.json  retrieval_eval.json
Assignments/week3/tests/: conftest.py  test_generation_metrics.py  test_hallucination.py  test_live_eval.py  test_live_llm.py  test_metrics.py  test_schemas.py
Assignments/week5/: .env.example  .gitignore  README.md  plan.md  pyproject.toml
Assignments/week5/docs/: 01-mcp-fundamentals.md  02-building-mcp-servers.md  03-connecting-mcp-clients.md  04-multi-agent-orchestration.md  05-tool-design-for-agents.md  06-agent-debugging.md  07-cost-latency-strategy.md  08-structured-outputs-guardrails.md  connecting-other-clients.md
Assignments/week5/reports/: TEST_RUN_REPORT.md  dev_smoke_test_mcp_tools.txt
Assignments/week5/tests/: test_formatting_worker.py  test_period.py  test_schemas.py  test_ticker_resolution.py
final project/: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  MCP.md  README.md  agent-and-mcp-tools.md  commands.txt  current-storage-and-retrieval-architecture.md  differentiator-plan.md  docker-compose.yml  graph-rag-and-vector-validity.md  hooks-and-logs.md  limits.md  model-provider-architecture.md  plan.md  prompting-fundamentals.md  prompts.md  pyproject.toml  questions.md  rag-architecture.md  recommended-indexing-and-retrieval-architecture.md  token-usage-and-metering.md  waypoint-mcp.example.json
final project/backend/: __init__.py
final project/backend/app/: config.py  indexing.py  main.py  mcp_server.py  observability.py  processes.py  repository_import.py
final project/backend/tests/: __init__.py  conftest.py  test_agent.py  test_analyzer.py  test_api.py  test_issues.py  test_mcp_server.py  test_model_comparison.py  test_observability.py  test_onboarding.py  test_polyglot_analyzer.py  test_provider.py  test_questions.py  test_repository_import.py  test_semantic_tools.py
final project/benchmarks/: README.md  retrieval_cases.json  run_repositories.py  run_retrieval.py
final project/benchmarks/results/: README.md  retrieval-latest.json
final project/deployment/: nginx.conf
final project/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js  vite.config.ts
final project/frontend/e2e/: application.spec.ts  voicebox.acceptance.spec.ts
final project/frontend/src/: App.tsx  api.ts  styles.css  types.ts
final project/verification/: README.md  __init__.py  core-features.json
final project/verification/coverage/: README.md
final project/verification/deployment/: README.md
final project/verification/http-e2e/: README.md
final project/verification/live-multistep/: README.md
final project/verification/model-comparison/: README.md
final project/verification/results/: README.md  core-feature-coverage.md  coverage-report.md  (+5 more)
(+164 files in other folders)
