[project]
name = "adaptive-codebase-onboarding"
version = "0.1.0"
description = "Evidence-aware code graph and adaptive developer onboarding"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.69,<1",
    "claude-agent-sdk>=0.2.110,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "mcp[cli]>=1.27,<2",
    "pydantic>=2.9,<3",
    "python-dotenv>=1.0,<2",
    "tree-sitter>=0.25,<0.27",
    "tree-sitter-javascript>=0.23,<0.26",
    "tree-sitter-typescript>=0.23,<0.24",
    "tree-sitter-java>=0.23,<0.24",
    "tree-sitter-html>=0.23,<0.24",
    "tree-sitter-css>=0.23,<0.24",
    "uvicorn[standard]>=0.30,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "benchmarks*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6,<8",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-ra --strict-markers --cov=backend.app --cov-report=term-missing --cov-report=xml:.waypoint-data/coverage.xml --cov-report=html:.waypoint-data/coverage-html --cov-fail-under=70"
markers = [
    "unit: isolated deterministic tests of one service or algorithm",
    "integration: deterministic tests crossing application component boundaries",
    "reference_repo: tests that require the pinned Flask reference checkout",
    "live_model: opt-in tests that spend provider credits or subscription usage",
]

[tool.coverage.run]
branch = true
source = ["backend.app"]
omit = [
    "backend/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
