[project]
name = "langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-text-splitters",
    "bs4",
    "requests",
    "python-dotenv>=1.2.2",
    "langchain-ollama>=1.1.0",
    "pypdf>=6.14.2",
    "langchain-core>=1.4.8",
    "numpy>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that call the real local LLM (deselected by default; run with -m live)",
]
addopts = "-m 'not live'"
